update example: use spring-boot, jdk11, theamleaf