@@ -3,7 +3,6 @@ package ru.akirakozov.sd.mvc.logic;
 import ru.akirakozov.sd.mvc.dao.ProductDao;
 import ru.akirakozov.sd.mvc.model.Product;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -15,7 +14,7 @@ import java.util.Optional;
 public abstract class DataFilter {
     private static Map<String, DataFilter> filters = createFiltersMap();
 
-    static HashMap<String, DataFilter> createFiltersMap() {
+    private static HashMap<String, DataFilter> createFiltersMap() {
         HashMap<String, DataFilter> filters = new HashMap<>();
         filters.put("all", new AllFilter());
         filters.put("max", new MaxFilter());
@@ -34,16 +33,16 @@ public abstract class DataFilter {
     private static class MaxFilter extends DataFilter {
         public List<Product> filter(ProductDao productDao) {
             return productDao.getProductWithMaxPrice()
-                    .map(Collections::singletonList)
-                    .orElse(Collections.emptyList());
+                    .map(List::of)
+                    .orElse(List.of());
         }
     };
 
     private static class MinFilter extends DataFilter {
         public List<Product> filter(ProductDao productDao) {
             return productDao.getProductWithMinPrice()
-                    .map(Collections::singletonList)
-                    .orElse(Collections.emptyList());
+                    .map(List::of)
+                    .orElse(List.of());
         }
     };
 
